@@ -301,72 +301,10 @@ class ManyToManyDP(DependencyProcessor):
         self.syncrules.execute(source, dest, obj, child, clearkeys)
 
 class AssociationDP(OneToManyDP):
-    def register_dependencies(self, uowcommit):
-        # association object.  our mapper should be dependent on both
-        # the parent mapper and the association object mapper.
-        # this is where we put the "stub" as a marker, so we get
-        # association/parent->stub->self, then we process the child
-        # elments after the 'stub' save, which is before our own
-        # mapper's save.
-        stub = MapperStub(self.parent, self.association, self.key)
-        uowcommit.register_dependency(self.parent, stub)
-        uowcommit.register_dependency(self.association, stub)
-        uowcommit.register_dependency(stub, self.mapper)
-        uowcommit.register_processor(stub, self, self.parent)
-    def process_dependencies(self, task, deplist, uowcommit, delete = False):
-        #print self.mapper.table.name + " " + self.key + " " + repr(len(deplist)) + " process_dep isdelete " + repr(delete) + " direction " + repr(self.direction)
-        for obj in deplist:
-            childlist = self.get_object_dependencies(obj, uowcommit, passive=True)
-            if childlist is None: continue
-
-            # for the association mapper, the list of association objects is organized into a unique list based on the
-            # "primary key".  newly added association items which correspond to existing association items are "merged"
-            # into the existing one by moving the "_instance_key" over to the added item, so instead of insert/delete you
-            # just get an update operation.
-            if not delete:
-                tosave = util.OrderedDict()
-                for child in childlist:
-                    self._synchronize(obj, child, None, False)
-                    key = self.mapper.instance_key(child)
-                    tosave[key] = child
-                    uowcommit.unregister_object(child)
-
-                todelete = {}
-                for child in childlist.deleted_items():
-                    self._synchronize(obj, child, None, False)
-                    key = self.mapper.instance_key(child)
-                    if not tosave.has_key(key):
-                        todelete[key] = child
-                    else:
-                        tosave[key]._instance_key = key
-                    uowcommit.unregister_object(child)
-                
-                for child in childlist.unchanged_items():
-                    key = self.mapper.instance_key(child)
-                    tosave[key]._instance_key = key
-                    
-                #print "OK for the save", [(o, getattr(o, '_instance_key', None)) for o in tosave.values()]
-                #print "OK for the delete", [(o, getattr(o, '_instance_key', None)) for o in todelete.values()]
-                
-                for obj in tosave.values():
-                    uowcommit.register_object(obj)
-                for obj in todelete.values():
-                    uowcommit.register_object(obj, isdelete=True)
-            else:
-                todelete = {}
-                for child in childlist.unchanged_items() + childlist.deleted_items():
-                    self._synchronize(obj, child, None, False)
-                    key = self.mapper.instance_key(child)
-                    todelete[key] = child
-                for obj in todelete.values():
-                    uowcommit.register_object(obj, isdelete=True)
-                    
-                
-    def preprocess_dependencies(self, task, deplist, uowcommit, delete = False):
-        # TODO: clean up the association step in process_dependencies and move the
-        # appropriate sections of it to here
-        pass
-        
+    def __init__(self, *args, **kwargs):
+        super(AssociationDP, self).__init__(*args, **kwargs)
+        self.cascade.delete = True
+        self.cascade.delete_orphan = True
 
 class MapperStub(object):
     """poses as a Mapper representing the association table in a many-to-many
